---
source: orm-tests/tests/query_ifelse.rs
expression: query_result_1.to_raw().build()
---
SELECT * FROM {
LET $val = 7;

LET $oye_name = 'Oyelowo';

LET $select_space_ship = (SELECT * FROM space_ship ORDER BY name DESC);

LET $cond = IF $val > 5 { RETURN $select_space_ship; } ELSE IF $oye_name = 'Oyelowo' { RETURN (SELECT * FROM weapon ORDER BY strength DESC); } ELSE {
LET $x = 2505;
RETURN $x;
};

RETURN $cond;
};
